--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header-container {
     width: 100%;
-    height: 98px;
+    height: 4.9rem;
     background-color: white;
     display: flex;
     align-items: center;
@@ -14,8 +14,8 @@
 }
 
 .header-container .my-container .header-logo {
-    width: 180px;
-    height: 43px;
+    width: 9rem;
+    height: 2.15rem;
     background: url(../imgs/header/logo.png) no-repeat;
     background-size: 100% 100%;
 }
@@ -26,31 +26,32 @@
 }
 
 .header-container .my-container .header-menu-item {
-    height: 40px;
-    font-size: 18px;
+    height: 2rem;
+    font-size: 0.9rem;
     font-family: PingFang;
     font-weight: 500;
     color: #535353;
-    margin-right: 55px;
+    margin-right: 2.75rem;
     cursor: pointer;
-    line-height: 40px;
+    line-height: 2rem;
     user-select: none;
 }
 
 .header-container .my-container .header-menu-item:hover {
     color: #006AB2;
+    text-decoration: none;
 }
 
 .header-container .my-container .header-menu-btn {
-    width: 144px;
-    height: 40px;
+    width: 7.2rem;
+    height: 2rem;
     background: linear-gradient(90deg, #006AB2, #16D8D8);
-    border-radius: 4px;
-    font-size: 18px;
+    border-radius: 0.2rem;
+    font-size: 0.9rem;
     font-family: PingFang;
     font-weight: 500;
     color: #FFFFFF;
-    line-height: 40px;
+    line-height: 2rem;
     text-align: center;
     cursor: pointer;
     user-select: none;
